--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/webpack-dev-server --inline --hot"
+    "start": "node_modules/.bin/webpack-dev-server --inline --hot",
+    "build": "WEBPACK_ENV=production node_modules/.bin/webpack --optimize-minimize --progress --color",
+    "deploy": "npm run build; surge -p ."
   },
   "repository": {
     "type": "git",
